--- a/src/app/admin/results/results.component.html
+++ b/src/app/admin/results/results.component.html
@@ -1,104 +1,164 @@
-<div>
-  <div class="mx-auto px-9" style="background-color: #F0F2F5">
-    <p>Hello</p>
-    <div class="inline-flex">
-      <mat-form-field appearance="standard">
-        <mat-label>Nombre de campaña</mat-label>
-        <input matInput placeholder="Selecciona una campaña">
-      </mat-form-field>
-    </div>
-    <div class="inline-flex">
-      <mat-form-field appearance="standard" class="example-form-field fecha">
-        <mat-label>Choose a date</mat-label>
-        <input matInput [matDatepicker]="datepicker">
-        <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
-        <mat-datepicker #datepicker>
-          <mat-datepicker-actions>
-            <button mat-button matDatepickerCancel>Cancel</button>
-            <button mat-raised-button color="primary" matDatepickerApply>Apply</button>
-          </mat-datepicker-actions>
-        </mat-datepicker>
-      </mat-form-field>
-      <mat-form-field appearance="standard" class="example-form-field fecha">
-        <mat-label>Choose a date</mat-label>
-        <input matInput [matDatepicker]="datepicker1">
-        <mat-datepicker-toggle matSuffix [for]="datepicker1"></mat-datepicker-toggle>
-        <mat-datepicker #datepicker1>
-          <mat-datepicker-actions>
-            <button mat-button matDatepickerCancel>Cancel</button>
-            <button mat-raised-button color="primary" matDatepickerApply>Apply</button>
-          </mat-datepicker-actions>
-        </mat-datepicker>
-      </mat-form-field>
-    </div>
-    <div class="inline-flex w-auto">
-      <mat-form-field appearance="standard" class="chips example-chip-list">
-        <mat-label>Favorite Fruits</mat-label>
-        <mat-chip-list #chipList aria-label="Fruit selection">
-          <mat-chip color="warn" *ngFor="let fruit of fruits" [selectable]="selectable"
-                    [removable]="removable" (removed)="remove(fruit)">
-            {{fruit.name}}
-            <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-          </mat-chip>
-          <input placeholder="New fruit..."
-                 [matChipInputFor]="chipList"
-                 [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                 [matChipInputAddOnBlur]="addOnBlur"
-                 (matChipInputTokenEnd)="add($event)">
-        </mat-chip-list>
-      </mat-form-field>
-    </div>
-    <div class="inline-flex">
-      <button mat-stroked-button color="warn">Warn</button>
-    </div>
-  </div>
-
-  <div class="container mx-auto px-4">
-    <div class="inline-flex w-1/2">
-      <mat-form-field appearance="standard">
-        <mat-label>Filtrar</mat-label>
-        <input matInput placeholder="Filtrado">
-      </mat-form-field>
-    </div>
-
-    <div class="inline-flex w-1/2">
-      <button mat-stroked-button color="warn" style="left: 76%">
-        <mat-icon>save_alt</mat-icon>
-        <span>Exportar Excel</span>
+<mat-sidenav-container class="page-container">
+  <mat-sidenav mode="side" class="sidenav-container" opened>
+    <div class="lista-botones">
+      <button mat-icon-button class="side-button side-selected">
+        <mat-icon aria-hidden="false" class="side-icon">campaign</mat-icon>
+      </button>
+      <button mat-icon-button class="side-button">
+        <mat-icon aria-hidden="false" class="side-icon">file_copy</mat-icon>
+      </button>
+      <button mat-icon-button class="side-button">
+        <mat-icon aria-hidden="false" class="side-icon">signal_cellular_alt</mat-icon>
+      </button>
+      <button mat-icon-button class="side-button">
+        <mat-icon aria-hidden="false" class="side-icon">settings</mat-icon>
+      </button>
+      <button mat-icon-button class="side-button">
+        <mat-icon aria-hidden="false" class="side-icon">laptop</mat-icon>
       </button>
     </div>
-    <table mat-table [dataSource]="dataSource" class="w-full col">
-
-      <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-
-      <!-- Position Column -->
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
-
-      <!-- Weight Column -->
-      <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-      </ng-container>
-
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
-</div>
-
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar class="topbar-container">
+      <div class="titulo-topbar">
+        <button mat-icon-button aria-label="back" class="boton-back">
+          <mat-icon class="icon-back">keyboard_arrow_left</mat-icon>
+        </button>
+        <div style="font-family: Ubuntu;" class="font-bold titulo-label">Resultados</div>
+      </div>
+      <div class="perfil-topbar">
+        <label class="perfil-label">Hola, Luis</label>
+        <img class="perfil-foto" src="../../../assets/img/perfil.png">
+      </div>
+    </mat-toolbar>
+    <div class="filtros-container">
+      <div class="filtros-envoltura">
+        <mat-form-field appearance="standard" [style.fontSize.px]=14 class="campaign-input">
+          <mat-label style="font-family: Ubuntu;">Nombre de Campaña</mat-label>
+          <input style="font-family: Ubuntu;" matInput [formControl]="myControl" [matAutocomplete]="auto" placeholder="Selecciona una Campaña">
+          <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+            <mat-option style="font-family: Ubuntu;" [style.fontSize.px]=13 *ngFor="let option of filteredOptions | async" [value]="option">
+              {{option}}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+        <mat-form-field appearance="outline" [style.fontSize.px]=13 class="rango-input">
+          <mat-label style="font-family: Ubuntu;">Ingresa un rango de fechas</mat-label>
+          <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+            <input matStartDate formControlName="start" placeholder="fecha inicio">
+            <input matEndDate formControlName="end" placeholder="fecha final">
+          </mat-date-range-input>
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-date-range-picker #picker></mat-date-range-picker>
+          <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+          <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+        </mat-form-field>
+        <mat-form-field appearance="standard" class="chips example-chip-list filtrotag-container">
+          <mat-label style="font-family: Ubuntu;">Filtros</mat-label>
+          <mat-chip-list #chipList aria-label="Fruit selection">
+            <mat-chip style="font-family: Ubuntu;" class="bg-red-100 text-red-400" *ngFor="let filtro of filtros" [selectable]="selectable" [removable]="removable"
+              (removed)="remove(filtro)">
+              {{filtro.name}}
+              <mat-icon class="text-red-600" matChipRemove *ngIf="removable">cancel</mat-icon>
+            </mat-chip>
+            <input style="font-family: Ubuntu;" placeholder="Filtrar..." [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+              [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)">
+          </mat-chip-list>
+        </mat-form-field>
+      </div>
+      <div class="buscar-envoltura">
+        <button mat-stroked-button color="primary" class="buscar-boton" (click)="onBuscar()">Buscar</button>
+      </div>
+    </div>
+    <ng-template [ngIf]="nullresult == true">
+      <div class="sinresultados-container">
+        <div class="sinresultados-envoltura">
+          <h1 style="font-family: Ubuntu;" class="resultado-titulo">Sin resultados</h1>
+          <div style="font-family: Ubuntu;" class="resultado-descripcion">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+            Velit
+            officia consequat duis enim velit
+            mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+        </div>
+      </div>
+    </ng-template>
+    <ng-template [ngIf]="nullresult == false">
+      <div class="resultados-container">
+        <div class="resultados-envoltura">
+          <div class="resultados-opciones">
+            <mat-form-field appearance="standard" [style.fontSize.px]=13 class="filtrar-input">
+              <mat-label style="font-family: Ubuntu;">Buscar por palabras</mat-label>
+              <input style="font-family: Ubuntu;" matInput (keyup)="applyFilter($event)" placeholder="Buscar..." #input>
+            </mat-form-field>
+            <div class="exportar-container">
+              <button style="font-family: Ubuntu;" mat-stroked-button color="primary" class="exportar-button">
+                <mat-icon>file_download</mat-icon>&nbsp;EXPORTAR EXCEL
+              </button>
+            </div>
+          </div>
+          <div class="mat-elevation-z8">
+            <table style="font-family: Ubuntu;" mat-table [dataSource]="dataSource" matSort class="tabla-resultados">
+              <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef class="tabla-header"> # </th>
+                <td mat-cell *matCellDef="let row" class="tabla-fila"> {{row.position}} </td>
+              </ng-container>
+              <ng-container matColumnDef="campaign">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="tabla-header"> Campaña </th>
+                <td mat-cell *matCellDef="let row" class="tabla-fila"> {{row.campaign}} </td>
+              </ng-container>
+              <ng-container matColumnDef="dni_deudor">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="tabla-header"> DNI deudor </th>
+                <td mat-cell *matCellDef="let row" class="tabla-fila"> {{row.dni_deudor}}% </td>
+              </ng-container>
+              <ng-container matColumnDef="dllamada">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="tabla-header"> Duración llamada </th>
+                <td mat-cell *matCellDef="let row" class="tabla-fila"> {{row.dllamada}} </td>
+              </ng-container>
+              <ng-container matColumnDef="entidad">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="tabla-header"> Entidad </th>
+                <td mat-cell *matCellDef="let row" class="tabla-fila"> {{row.entidad}} </td>
+              </ng-container>
+              <ng-container matColumnDef="estado">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="tabla-header"> Estado </th>
+                <td mat-cell *matCellDef="let row" class="tabla-fila"> {{row.estado}} </td>
+              </ng-container>
+              <ng-container matColumnDef="horafin">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="tabla-header"> Fecha/hora fin </th>
+                <td mat-cell *matCellDef="let row" class="tabla-fila"> {{row.horafin}} </td>
+              </ng-container>
+              <ng-container matColumnDef="horainicio">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="tabla-header"> Fecha/hora inicio </th>
+                <td mat-cell *matCellDef="let row" class="tabla-fila"> {{row.horainicio}} </td>
+              </ng-container>
+              <ng-container matColumnDef="idcall">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="tabla-header"> Id call </th>
+                <td mat-cell *matCellDef="let row" class="tabla-fila"> {{row.idcall}} </td>
+              </ng-container>
+              <ng-container matColumnDef="idcampaign">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="tabla-header"> Id campaña </th>
+                <td mat-cell *matCellDef="let row" class="tabla-fila"> {{row.idcampaign}} </td>
+              </ng-container>
+              <ng-container matColumnDef="deuda">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="tabla-header"> Monto deuda </th>
+                <td mat-cell *matCellDef="let row" class="tabla-fila"> {{row.deuda}} </td>
+              </ng-container>
+              <ng-container matColumnDef="deudor">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="tabla-header"> Nombre deudor </th>
+                <td mat-cell *matCellDef="let row" class="tabla-fila"> {{row.deudor}} </td>
+              </ng-container>
+              <ng-container matColumnDef="telefono">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="tabla-header"> Telefono </th>
+                <td mat-cell *matCellDef="let row" class="tabla-fila"> {{row.telefono}} </td>
+              </ng-container>
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+              </tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+          </div>
+        </div>
+      </div>
+    </ng-template>
+  </mat-sidenav-content>
+</mat-sidenav-container>
