--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="lg:flex w-1/2 hidden bg-no-repeat bg-cover relative items-center" style="background-image: url(assets/img/login.jpg);">
     <div class="absolute inset-0 z-0"></div>
     <div class="w-full px-24 z-10">
-      <p class="text-7xl my-4 font-ubuntu text-white">LA SOLUCIÓN NUNCA FUE TAN FACIL</p>
+      <p style="font-family: Ubuntu;" class="text-7xl my-4 text-white">La solución nunca fue tan fácil</p>
     </div>
   </div>
   <div class="lg:w-1/2 w-full flex items-center justify-center text-center md:px-16 px-0 z-0">
@@ -13,31 +13,31 @@
       <h1 class="my-6">
         <img class="inline-flex w-auto h-16 sm:h-16" src="assets/img/logo.png">
       </h1>
-      <p class="text-black text-4xl font-ubuntu md:font-ubuntu">
+      <p style="font-family: Ubuntu;" class="text-black text-3xl font-ubuntu md:font-ubuntu">
         Iniciar Sesión
       </p>
       <form action="" class="sm:w-2/3 w-full px-4 lg:px-0 mx-auto">
-        <div class="pb-2 pt-4">
-          <mat-form-field appearance="outline" class="w-full">
+        <div class="pb-1 pt-1"> 
+          <mat-form-field appearance="outline" [style.fontSize.px]=12 class="w-full">
             <mat-label>Correo Electronico</mat-label>
-            <input id="email" class="block w-full p-4 text-lg rounded-sm" matInput placeholder="Ingresar correo electronico">
+            <input style="font-family: Ubuntu;" id="email" class="block w-full text-sm rounded-sm" matInput placeholder="Ingresar correo electronico">
             <mat-icon matSuffix class="opacity-50">person</mat-icon>
           </mat-form-field>
         </div>
-        <div class="pb-2 pt-4">
-          <mat-form-field appearance="outline" class="w-full">
-            <mat-label>Contraseña</mat-label>
-            <input id="password" type="password" class="block w-full p-4 text-lg rounded-sm" matInput placeholder="Ingresar contraseña">
+        <div class="pb-1 pt-1">
+          <mat-form-field appearance="outline" [style.fontSize.px]=12 class="w-full">
+            <mat-label style="font-family: Ubuntu;">Contraseña</mat-label>
+            <input style="font-family: Ubuntu;" id="password" type="password" class="block w-full text-sm rounded-sm" matInput placeholder="Ingresar contraseña">
             <mat-icon matSuffix class="opacity-50">visibility</mat-icon>
           </mat-form-field>
         </div>
 
         <div class="px-4 pb-2 pt-4">
-          <button class="uppercase block w-full p-4 text-lg rounded-full text-red-600 hover:bg-red-700 hover:text-white border-red-600 border focus:outline-none">Ingresar</button>
+          <button style="font-family: Ubuntu;" (click)="Login()" type="button" class="uppercase block w-full p-2 text-base rounded-full text-red-600 hover:bg-red-700 hover:text-white border-red-600 border focus:outline-none">Ingresar</button>
         </div>
 
         <div class="text-center text-gray-700 hover:underline hover:text-gray-500">
-          <a routerLink="/auth/forget-password">¿Olvidaste tu contraseña?</a>
+          <a style="font-family: Ubuntu;" routerLink="/auth/forget-password">¿Olvidaste tu contraseña?</a>
         </div>
         <div class="p-4 text-center right-0 left-0 flex justify-center space-x-4 mt-16 lg:hidden ">
           <a href="#">
