--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,13 @@
 // For more information: https://material.angular.io/guide/theming
 @use '~@angular/material' as mat;
 // Plus imports for other components in your app.
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -16,20 +22,27 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $notifait-voice-ai-primary: mat.define-palette(mat.$indigo-palette);
-$notifait-voice-ai-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$notifait-voice-ai-accent: mat.define-palette(
+  mat.$pink-palette,
+  A200,
+  A100,
+  A400
+);
 
 // The warn palette is optional (defaults to red).
 $notifait-voice-ai-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$notifait-voice-ai-theme: mat.define-light-theme((
-  color: (
-    primary: $notifait-voice-ai-primary,
-    accent: $notifait-voice-ai-accent,
-    warn: $notifait-voice-ai-warn,
+$notifait-voice-ai-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $notifait-voice-ai-primary,
+      accent: $notifait-voice-ai-accent,
+      warn: $notifait-voice-ai-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -38,5 +51,22 @@ $notifait-voice-ai-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@font-face {
+  font-family: Ubuntu;
+  src: url("./assets/fonts/Ubuntu-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: UbuntuMono;
+  src: url("./assets/fonts/UbuntuMono-Regular.ttf") format("truetype");
+}
+
+html,
+body {
+  height: 100%;
+  font-family: Ubuntu;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
